--- a/ui/app/common/ui-helper/header.html
+++ b/ui/app/common/ui-helper/header.html
@@ -12,6 +12,9 @@
                 </div>
             </div>
             <div ui-view="additional-header"></div>
+            <button class="btn-user-info fr" id="help-icon-button">
+                <img src="../images/help_icon.png" id="help-icon"> 
+            </button>
         </header>
     </div>
 </div>
