--- a/ui/app/common/ui-helper/header.html
+++ b/ui/app/common/ui-helper/header.html
@@ -2,7 +2,7 @@
     <div class="opd-header-top">
         <header>
             <bm-back-links></bm-back-links>
-            <div class="fr">
+            <div class="fr meta-button">
                 <div class="retro-date-widget-wrapper"
                      show-if-privilege="{{retrospectivePrivilege}},{{onBehalfOfPrivilege}},{{locationPickerPrivilege}}"
                      ng-if="getTitle()">
